nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample-service
spec:
  selector:
    app: nginx-sample
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
