nginx/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-sample
spec:
  to:
    kind: Service
    name: nginx-sample-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
